# chip-8

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: CMakeLists.txt  chip8.rc  emulator.cpp  emulator.hpp  logger.cpp  main.cpp  platform.hpp  platform_linux.cpp  platform_windows.cpp  utils.hpp  version.hpp.in
